--- a/style.css
+++ b/style.css
@@ -6,67 +6,70 @@ body{
 	background:#222;
 	color:#666;
 }
-
-#header{
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:24px;
-	font-weight:bold;
-	text-align:center;
-	text-indent:35px;
-	margin: 0 auto;
-	width:800px;
-	margin-bottom:10px;
-}
-
-hr{
-	margin: 20px;
-	border:none;
-	border-top: 1px solid #111;
-	border-bottom: 1px solid #333;
-}
-
-p{
-	color:#444;
-	text-align:left;
-	font-size:15px;
-	margin-left: 20px;
-	margin-bottom: -10px;
-}
-
 a{
 	color:#444;
 }
 img{
-	border:3px solid #444;
+	border:5px solid #444;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	margin: 2px;
+	transition: opacity .5s ease-in-out;
+	-moz-transition: opacity .5s ease-in-out;
+	-webkit-transition: opacity .5s ease-in-out;
 }
 img:hover{
-	border-color:#555;
+	border-color:#888;
 	-moz-box-shadow: 0px 0px 15px #111;
 	-webkit-box-shadow: 0px 0px 15px #111;
+	transition: border-color .5s ease-in-out;
+	-moz-transition: border-color .5s ease-in-out;
+	-webkit-transition: border-color .5s ease-in-out;
 }
-#controls{
-position:absolute;
- bottom:0px;
- left:37%;
- z-index:1;
+#instructions{
+	position:fixed;
+	border:3px solid #333;
+	bottom:10%;
+	left:32%;
+	z-index:1;
+	font-size:50px;
+	background: #333;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	margin: 2px;
+	-moz-box-shadow: 0px 0px 15px #111;
+	-webkit-box-shadow: 0px 0px 15px #111;
+	opacity: 1;
+	transition: opacity .75s ease-in-out;
+	-moz-transition: opacity .75s ease-in-out;
+	-webkit-transition: opacity .75s ease-in-out;
 }
-strong{
-	margin-top: -10px;
-}
-button{
-	margin: 0px;
-	margin-top: -0px;
-	margin-bottom: -0px;
-	padding: 3px;
-	padding-left: 10px;
-	padding-right: 10px;
-	box-shadow: 0px 0px 15px 0px #999;
+#quit{
+	position:fixed;
+	border:3px solid #333;
+	top:10%;
+	left:32%;
+	z-index:1;
+	font-size:50px;
+	background: #333;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	margin: 2px;
+	-moz-box-shadow: 0px 0px 15px #111;
+	-webkit-box-shadow: 0px 0px 15px #111;
+	opacity: 0;
+	transition: opacity .5s ease-in-out;
+	-moz-transition: opacity .5s ease-in-out;
+	-webkit-transition: opacity .5s ease-in-out;
 }
 #disclaimer{
+	position:fixed;
 	right:2px;
 	bottom:10px;
-	position:absolute;
+	background: #111;
+	opacity: .6;
+	-moz-box-shadow: 0px 0px 15px #111;
+	-webkit-box-shadow: 0px 0px 15px #111;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
 }
