Fixed general CSS issues, fixed centering of the controls

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 body{
 	background:#222;
 	color:#666;
+	width: auto;
 }
 a{
 	color:#444;
@@ -13,7 +14,7 @@ img{
 	border:5px solid #444;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
-	margin: 2px;
+	margin: .2%;
 	transition: opacity .5s ease-in-out;
 	-moz-transition: opacity .5s ease-in-out;
 	-webkit-transition: opacity .5s ease-in-out;
@@ -22,54 +23,61 @@ img:hover{
 	border-color:#888;
 	-moz-box-shadow: 0px 0px 15px #111;
 	-webkit-box-shadow: 0px 0px 15px #111;
-	transition: border-color .5s ease-in-out;
-	-moz-transition: border-color .5s ease-in-out;
-	-webkit-transition: border-color .5s ease-in-out;
 }
 #instructions{
 	position:fixed;
 	border:3px solid #333;
 	bottom:10%;
-	left:32%;
+	left:50%;
+	width: 40%;
+	margin-left:-20%;
 	z-index:1;
 	font-size:50px;
 	background: #333;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
-	margin: 2px;
-	-moz-box-shadow: 0px 0px 15px #111;
-	-webkit-box-shadow: 0px 0px 15px #111;
+	-moz-box-shadow: 5px 5px 15px #000;
+	-webkit-box-shadow: 5px 5px 15px #000;
 	opacity: 1;
-	transition: opacity .75s ease-in-out;
-	-moz-transition: opacity .75s ease-in-out;
-	-webkit-transition: opacity .75s ease-in-out;
+	transition: opacity .75s;
+	-moz-transition: opacity .75s;
+	-webkit-transition: opacity .75s;
+	cursor: pointer;
 }
 #quit{
 	position:fixed;
 	border:3px solid #333;
 	top:10%;
-	left:32%;
+	left:50%;
+	width: 40%;
+	margin-left:-20%;
 	z-index:1;
 	font-size:50px;
 	background: #333;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
-	margin: 2px;
-	-moz-box-shadow: 0px 0px 15px #111;
-	-webkit-box-shadow: 0px 0px 15px #111;
+	-moz-box-shadow: 5px 5px 15px #000;
+	-webkit-box-shadow: 5px 5px 15px #000;
 	opacity: 0;
-	transition: opacity .5s ease-in-out;
-	-moz-transition: opacity .5s ease-in-out;
-	-webkit-transition: opacity .5s ease-in-out;
+	transition: opacity .5s;
+	-moz-transition: opacity .5s;
+	-webkit-transition: opacity .5s;
+	cursor: pointer;
 }
 #disclaimer{
 	position:fixed;
-	right:2px;
+	right:5px;
 	bottom:10px;
 	background: #111;
 	opacity: .6;
-	-moz-box-shadow: 0px 0px 15px #111;
-	-webkit-box-shadow: 0px 0px 15px #111;
+	-moz-box-shadow: 5px 5px 15px #000;
+	-webkit-box-shadow: 5px 5px 15px #000;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
+	transition: opacity .5s;
+	-moz-transition: opacity .5s;
+	-webkit-transition: opacity .5s;
+}
+#disclaimer:hover{
+	opacity: 1;
 }
