--- a/style.css
+++ b/style.css
@@ -26,14 +26,14 @@ img:hover{
 }
 #instructions{
 	position:fixed;
-	border:3px solid #333;
-	bottom:10%;
+	border:3px solid #111;
+	bottom:7%;
 	left:50%;
 	width: 40%;
 	margin-left:-20%;
 	z-index:1;
 	font-size:50px;
-	background: #333;
+	background: #111;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-box-shadow: 5px 5px 15px #000;
@@ -46,14 +46,14 @@ img:hover{
 }
 #quit{
 	position:fixed;
-	border:3px solid #333;
+	border:3px solid #111;
 	top:10%;
 	left:50%;
 	width: 40%;
 	margin-left:-20%;
 	z-index:1;
 	font-size:50px;
-	background: #333;
+	background: #111;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-box-shadow: 5px 5px 15px #000;
@@ -79,5 +79,23 @@ img:hover{
 	-webkit-transition: opacity .5s;
 }
 #disclaimer:hover{
+	opacity: 1;
+}
+#size{
+font-size:30px;
+	position:fixed;
+	left: 5px;
+	bottom: 10px;
+	background: #111;
+	opacity: .6;
+	-moz-box-shadow: 5px 5px 15px #000;
+	-webkit-box-shadow: 5px 5px 15px #000;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	transition: opacity .5s;
+	-moz-transition: opacity .5s;
+	-webkit-transition: opacity .5s;
+}
+#size:hover{
 	opacity: 1;
 }
