Minor changes/tweaks for version 1 release
Removed Stop Scrolling button, moved the image size selector, adjusted
CSS

--- a/style.css
+++ b/style.css
@@ -82,10 +82,13 @@ img:hover{
 	opacity: 1;
 }
 #size{
-font-size:24px;
+	font-size:24px;
 	position:fixed;
-	left: 5px;
+	border:3px solid #111;
 	bottom: 10px;
+	left:50%;
+	width: 20%;
+	margin-left:-10%;
 	background: #111;
 	opacity: .6;
 	-moz-box-shadow: 5px 5px 15px #000;
