--- a/style.css
+++ b/style.css
@@ -11,33 +11,35 @@ a{
 	color:#444;
 }
 img{
-	border:5px solid #444;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
+	border:.4em solid #444;
+	-moz-border-radius: .2em;
+	-webkit-border-radius: .2em;
 	margin: .2%;
 	transition: opacity .5s ease-in-out;
 	-moz-transition: opacity .5s ease-in-out;
 	-webkit-transition: opacity .5s ease-in-out;
+	-moz-box-shadow: .2em .2em .6em #000;
+	-webkit-box-shadow: .2em .2em .6em #000;
 }
 img:hover{
 	border-color:#888;
-	-moz-box-shadow: 0px 0px 15px #111;
-	-webkit-box-shadow: 0px 0px 15px #111;
+	-moz-box-shadow: 0px 0px 1.2em #111;
+	-webkit-box-shadow: 0px 0px 1.2em #111;
 }
 #instructions{
 	position:fixed;
-	border:3px solid #111;
+	border:.05em solid #111;
 	bottom:7%;
 	left:50%;
-	width: 40%;
-	margin-left:-20%;
+	width: 8em;
+	margin-left:-4em;
 	z-index:1;
-	font-size:50px;
+	font-size:4em;
 	background: #111;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-box-shadow: 5px 5px 15px #000;
-	-webkit-box-shadow: 5px 5px 15px #000;
+	-moz-border-radius: .2em;
+	-webkit-border-radius: .2em;
+	-moz-box-shadow: .2em .2em .6em #000;
+	-webkit-box-shadow: .2em .2em .6em #000;
 	opacity: 1;
 	transition: opacity .75s;
 	-moz-transition: opacity .75s;
@@ -46,39 +48,77 @@ img:hover{
 }
 #disclaimer{
 	position:fixed;
-	right:5px;
-	bottom:10px;
+	right:.2em;
+	bottom:.4em;
 	background: #111;
 	opacity: .6;
-	-moz-box-shadow: 5px 5px 15px #000;
-	-webkit-box-shadow: 5px 5px 15px #000;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
+	width:32em;
+	-moz-box-shadow: .2em .2em .6em #000;
+	-webkit-box-shadow: .2em .2em .6em #000;
+	-moz-border-radius: .2em;
+	-webkit-border-radius: .2em;
 	transition: opacity .5s;
 	-moz-transition: opacity .5s;
 	-webkit-transition: opacity .5s;
+	z-index:1;
 }
 #disclaimer:hover{
 	opacity: 1;
 }
 #size{
-	font-size:24px;
+	font-size:1.5em;
 	position:fixed;
-	border:3px solid #111;
-	bottom: 10px;
+	border:.05em solid #111;
+	bottom: .4em;
 	left:50%;
-	width: 20%;
-	margin-left:-10%;
+	width: 16em;
+	margin-left:-8em;
 	background: #111;
 	opacity: .6;
-	-moz-box-shadow: 5px 5px 15px #000;
-	-webkit-box-shadow: 5px 5px 15px #000;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
+	z-index:1;
+	-moz-box-shadow: .2em .2em .6em #000;
+	-webkit-box-shadow: .2em .2em .6em #000;
+	-moz-border-radius: .2em;
+	-webkit-border-radius: .2em;
 	transition: opacity .5s;
 	-moz-transition: opacity .5s;
 	-webkit-transition: opacity .5s;
 }
 #size:hover{
 	opacity: 1;
+}
+
+/*mobile hack*/
+@media screen and (orientation:portrait)
+{
+   #disclaimer
+   {
+    right:auto;
+	bottom:auto;
+	left:50%;
+	top:.4em;
+	margin-left:-10em;
+	width:20em;
+	font-size:2em;
+   }
+   #instructions
+   {
+   font-size:6em;
+   }
+   #size
+   {
+   font-size:2em;
+   }
+   img
+   {
+   width:28em;
+   }
+   #size
+   {
+   opacity:0;
+   }
+   #size:hover
+   {
+   opacity:0;
+   }
 }
