Added privacy policy information
gotta keep them lawyers off my back

also adjusted meta data

--- a/style.css
+++ b/style.css
@@ -78,6 +78,25 @@ img{
 #disclaimer:hover{
 	opacity: 1;
 }
+#privacy{
+	position:fixed;
+	left:.2em;
+	bottom:.4em;
+	background: #111;
+	opacity:.6;
+	width:12em;
+	-moz-box-shadow: .2em .2em .6em #000;
+	-webkit-box-shadow: .2em .2em .6em #000;
+	-moz-border-radius: .2em;
+	-webkit-border-radius: .2em;
+	transition: opacity .2s;
+	-moz-transition: opacity .2s;
+	-webkit-transition: opacity .2s;
+	z-index:1;
+}
+#privacy:hover{
+	opacity: 1;
+}
 #size{
 	font-size:1.5em;
 	position:fixed;
@@ -121,6 +140,10 @@ img{
    #instructions
    {
 	display:none;
+   }
+   #privacy
+   {
+   display:none;
    }
    #size
    {
